--- a/public/css/signin.css
+++ b/public/css/signin.css
@@ -17,7 +17,7 @@ body {
 
 .form-signin {
   width: 100%;
-  max-width: 330px;
+  max-width: 700px;
   padding: 1%;
   margin: auto;
 }
@@ -51,10 +51,17 @@ button {
   margin-bottom: 1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-  width: 100%;
+  width: 50%;
 }
 .form-signin input[type="password"] {
   margin-bottom: 10px;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
+}
+textarea {
+  margin-bottom: 1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  width: 100%;
+  height: 300px;
 }
